added new training model with simple ui

--- a/micro/templates/micro/base.html
+++ b/micro/templates/micro/base.html
@@ -114,7 +114,7 @@
               </p>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Training</a>
+              <a class="dropdown-item" href="{% url 'training:all_training' %}">Training</a>
               <a class="dropdown-item" href="#">Model Building</a>
               <a class="dropdown-item" href="#">Commertial works</a>
             </div>
