Added new model of commercial

--- a/micro/templates/micro/base.html
+++ b/micro/templates/micro/base.html
@@ -116,7 +116,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="{% url 'training:all_training' %}">Training</a>
               <a class="dropdown-item" href="#">Model Building</a>
-              <a class="dropdown-item" href="#">Commertial works</a>
+              <a class="dropdown-item" href="{% url 'commercial:all_commercial' %}">Commertial works</a>
             </div>
           </li>
 
