--- a/training/templates/training/all_training.html
+++ b/training/templates/training/all_training.html
@@ -3,11 +3,13 @@
 
 {% block content %}
 <br>
-<div class="container">
-<h1>TRAINING WE PROVIDE</h1>
+<div class="container bg-warning">
+<p>
+<h1 class="text-center title" >Training we provide</h1>
+<div class="space-50"></div>
+</p>
 </div>
 <br>
-
 
 <div class="container">
   <div class="row">
