--- a/uav/templates/uav/all_uavs.html
+++ b/uav/templates/uav/all_uavs.html
@@ -32,7 +32,7 @@
 
 
 {% for uav in uavs %}
-<div class="section section-examples" data-background-color="black">
+<div class="section section-examples" data-background-color="yellow">
 
   <div class="space-30"></div>
   <div class="container text-center">
