home page rectified a bit

--- a/micro/templates/micro/home.html
+++ b/micro/templates/micro/home.html
@@ -35,12 +35,12 @@
           <i class="now-ui-icons loader_refresh spin"></i>
     </section> -->
       <h1 class="text-warning">
-        <i class="now-ui-icons ui-2_settings-90"></i> ------
-        <i class="now-ui-icons ui-1_send"></i> ------
-        <i class="now-ui-icons design_vector"></i> ------
-        <i class="now-ui-icons ui-1_send"></i> ------
-        <i class="now-ui-icons objects_spaceship"></i> ------
-        <i class="now-ui-icons shopping_cart-simple"></i> -----
+        ---- <i class="now-ui-icons ui-2_settings-90"></i> -----
+        <i class="now-ui-icons ui-1_send"></i> -----
+        <i class="now-ui-icons design_vector"></i> -----
+        <i class="now-ui-icons ui-1_send"></i> -----
+        <i class="now-ui-icons objects_spaceship"></i> -----
+        <i class="now-ui-icons shopping_cart-simple"></i> ----
       </h1>
 
 
@@ -51,7 +51,7 @@
 
           <h5 class="description"><b>-------------------------------------------------------------------------------</b><h5>
 
-      <h1 >  ONGOING PROJECTS </h1>
+      <h1 class="header">  ONGOING PROJECTS </h1>
       <!-- <h5 class="description"><b>-------------------------------------------------------------------------------</b><h5> -->
       </div>
     </div>
@@ -60,7 +60,7 @@
   <!-- <h2> Jus Chillin</h2> -->
 
   <div class="section section-team text-center" data-background-color="black">
-    <h2 class="title">Awesome</h2>
+    <h2 class="title">Awesome Stuff !!</h2>
     <div class="container">
       <h2 class="description">_________________________________________</h2>
       <div class="team">
@@ -162,8 +162,10 @@
   <div class="container text-center">
     <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-8">
-        <h2 class="title">Aviation in Brief</h2>
-        <h5 class="description"><b>The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go. More importantly, looking at them will give you a picture of what you can built with this powerful Bootstrap 4 ui kit.</b></h5>
+        <h2 class="title">Micro-Aviation</h2>
+        <h5 class="description"><b>Micro Aviation is a business involved in many ariel and non ariel activities 
+        such as fixed-wing flying aircrafts, multirotor drones, static model making, uav training, electronic aricraft
+      components and many more.</b></h5>
       </div>
     </div>
   </div>
@@ -185,7 +187,7 @@
           <br>
           <div class="row justify-content-md-center sharing-area text-center">
             <div class="text-center col-md-12 col-lg-8">
-              <h3>Thank you for supporting us!</h3>
+              <h3>Thank you for visiting us!</h3>
             </div>
             <div class="text-center col-md-12 col-lg-8">
               <!-- <a target="_blank" href="#" class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg" rel="tooltip" title="Follow us">
